# air_exchanger

./: .gitignore  README.md
busmaster_m1280/: Makefile  config.h  main.c  rs485_com.c
busmaster_m1280/uart/: uart.h  uart0.c  uart1.c
common/: rs485_com.c  rs485_com.h  rs485_structs.h  uart.c
esp32-webui/: .gitignore  build.js  package-lock.json  package.json  server.js  tailwind.config.js  tsconfig.json  webpack.config.js
esp32-webui/src/: common.ts  index.html  index.ts  nav.html  styles.css  wifi_setup.html  wifi_setup.ts
esp32_busmaster/: .gitignore  partitions.csv  platformio.ini  sdkconfig  sdkconfig.esp32dev
esp32_busmaster/components/shell/: CMakeLists.txt  command.c  commands_util.c  linker.lf
esp32_busmaster/main/: CMakeLists.txt  app_main.c  bus_master.c  bus_master.h  idf_component.yml  mqtt_app.c  rs485_com.c  rs485_uart.c  rs485_uart.h  shell_commands.c  shell_task.c  shell_task.h  telnet_server.c  telnet_server.h  ui_values.h  webserver.c  webserver.h  webserver_spiffs.c  webserver_spiffs.h  webserver_sse.c  webserver_sse.h  wifi.c  wifi.h  wifi_connect.c  wifi_connect.h
esp32_busmaster/main/spiffs/: index.html  wifi_setup.html
fan_controller/: Makefile  adc.c  adc.h  conversion_table.h  fan_pwm.c  fan_pwm.h  fan_rpm.c  fan_rpm.h  main.c  rs485_com.c
fan_controller/uart/: uart.c  uart0.c  uart1.c
heater/: Makefile  adc.c  adc.h  config.h  conversion_table.c  main.c
heater/uart/: uart.h  uart0.c
mainboard/: Makefile  adc.c  adc.h  main.c  rs485_com.c
mainboard/uart/: uart0.c
